--- a/index.html
+++ b/index.html
@@ -3,77 +3,68 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Publifofa - Marketing fora da curva</title>
+  <title>PUBLIFOFA - Marketing fora da curva</title>
+  <script src="https://cdn.tailwindcss.com"></script>
   <style>
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      background-color: #7a0f1b;
-      color: #fff;
-      text-align: center;
-    }
-    header {
-      padding: 40px 20px;
-    }
-    header img {
-      max-width: 250px;
-    }
-    nav {
-      margin-top: 20px;
-    }
-    nav a {
-      color: #fff;
-      text-decoration: none;
-      margin: 0 15px;
-      font-weight: bold;
-    }
-    nav a:hover {
-      text-decoration: underline;
-    }
-    section {
-      padding: 60px 20px;
-    }
-    .card {
-      background: #fff;
-      color: #333;
-      padding: 20px;
-      border-radius: 12px;
-      max-width: 500px;
-      margin: 20px auto;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.3);
+    html {
+      scroll-behavior: smooth;
     }
   </style>
 </head>
-<body>
+<body class="bg-[#7B0D1E] text-white font-sans">
 
-  <!-- Página inicial -->
-  <header>
-    <img src="logo.png" alt="Publifofa Logo">
-    <h1>Publifofa</h1>
-    <p>Marketing fora da curva</p>
-    <nav>
-      <a href="#servicos">Serviços</a>
-      <a href="#informacoes">Informações</a>
+  <!-- Navbar -->
+  <header class="flex justify-between items-center px-8 py-4 border-b border-white/20 sticky top-0 bg-[#7B0D1E]/90 backdrop-blur z-50">
+    <h1 class="text-2xl font-bold">PUBLIFOFA</h1>
+    <nav class="space-x-6">
+      <a href="#home" class="hover:text-gray-300 transition">Home</a>
+      <a href="#servicos" class="hover:text-gray-300 transition">Serviços</a>
+      <a href="#contato" class="hover:text-gray-300 transition">Contato</a>
     </nav>
   </header>
 
-  <section id="servicos">
-    <h2>Nossos Serviços</h2>
-    <div class="card">
-      <p><strong>Marketing Digital</strong></p>
-      <p><strong>Design Criativo</strong></p>
-      <p><strong>Gestão de Redes Sociais</strong></p>
+  <!-- Home -->
+  <section id="home" class="p-10 text-center min-h-screen flex flex-col justify-center">
+    <h2 class="text-4xl font-bold mb-4">Marketing fora da curva</h2>
+    <p class="text-lg max-w-2xl mx-auto">
+      Somos especialistas em Marketing Digital, Design e Mídia Social.
+      Criamos soluções criativas que conectam marcas e pessoas.
+    </p>
+  </section>
+
+  <!-- Serviços -->
+  <section id="servicos" class="p-10 text-center min-h-screen flex flex-col justify-center">
+    <h2 class="text-4xl font-bold mb-8">Nossos Serviços</h2>
+    <div class="grid md:grid-cols-3 gap-8">
+      <div class="p-6 rounded-2xl shadow-lg bg-white text-[#7B0D1E] hover:scale-105 transition">
+        <h3 class="text-xl font-bold mb-2">Marketing Digital</h3>
+        <p>Campanhas estratégicas para aumentar sua presença online.</p>
+      </div>
+      <div class="p-6 rounded-2xl shadow-lg bg-white text-[#7B0D1E] hover:scale-105 transition">
+        <h3 class="text-xl font-bold mb-2">Design</h3>
+        <p>Identidade visual criativa e profissional para sua marca.</p>
+      </div>
+      <div class="p-6 rounded-2xl shadow-lg bg-white text-[#7B0D1E] hover:scale-105 transition">
+        <h3 class="text-xl font-bold mb-2">Mídia Social</h3>
+        <p>Gestão e criação de conteúdo para engajamento real.</p>
+      </div>
     </div>
   </section>
 
-  <!-- Página de informações -->
-  <section id="informacoes">
-    <h2>Informações de Contato</h2>
-    <div class="card">
-      <p><strong>Email:</strong> publifofa318@gmail.com</p>
-      <p><strong>Telefone:</strong> (22) 99790-8747</p>
+  <!-- Contato -->
+  <section id="contato" class="p-10 text-center min-h-screen flex flex-col justify-center">
+    <h2 class="text-4xl font-bold mb-6">Fale Conosco</h2>
+    <p class="mb-4">Entre em contato e vamos impulsionar sua marca!</p>
+    <div class="space-y-3">
+      <p>Email: <a href="mailto:publifofa318@gmail.com" class="underline hover:text-gray-300">publifofa318@gmail.com</a></p>
+      <p>Telefone: <a href="tel:22997908747" class="underline hover:text-gray-300">(22) 99790-8747</a></p>
     </div>
   </section>
+
+  <!-- Rodapé -->
+  <footer class="text-center py-6 border-t border-white/20">
+    <p class="text-sm">© 2025 Publifofa - Marketing fora da curva</p>
+  </footer>
 
 </body>
 </html>
